| Bug #28905 | problems with output from `ndbd --help` | ||
|---|---|---|---|
| Submitted: | 5 Jun 2007 19:08 | Modified: | 27 May 2009 16:32 |
| Reporter: | Matthew Montgomery | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1 | OS: | Any |
| Assigned to: | jack andrews | CPU Architecture: | Any |
| Tags: | 5.0.38, 5.1, Help, ndbd, usage | ||
[5 Jun 2007 20:30]
Sveta Smirnova
Thank you for the report. Verified as described.
[7 Apr 2009 8:16]
jack andrews
jack> magnus: is there a difference between --initial and --initial-start? magnus> jack: yes, there apparently is a sligth difference. jack> magnus: i guess the fix is to document them and fix the arg docstring magnus> jack: sounds good magnus> jack: and "The output of ndbd --help does not list options in alphabetical order. " ? I tedn to think that we shoudl ignore that... ;) jack> magnus: yes, i agree magnus> jack: ok, good. So just find out what the difference is and write it in the bugreport, small patch that updates the help text.
[9 Apr 2009 3:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/71713 2865 jack andrews 2009-04-09 bug#28905 problems with output from `ndbd --help`
[15 Apr 2009 12:12]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:jack@asus-20090415121108-avfvvt8no0ba6bdb) (version source revid:jack@sun.com-20090409034622-bvl8khm2tigel453) (merge vers: 5.1.32-ndb-7.0.5) (pib:6)
[16 Apr 2009 16:40]
Jon Stephens
Documented in the NDB-7.0.6 changelog as follows:
The output of ndbd --help did not provide clear information about
the program's --initial and --initial-start options.
[16 Apr 2009 16:42]
Jon Stephens
This appears to be a very simple patch with non-trivial positive impact for users. Are we not going to apply it in 6.2/6.3 as well? (I think we should.)
[28 Apr 2009 6:10]
jack andrews
magnus, let me know how i should go about patching earlier versions. ta.
[29 Apr 2009 7:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/72983 2911 jack andrews 2009-04-29 bug#28905 problems with output from `ndbd --help`
[29 Apr 2009 8:39]
jack andrews
i've committed this change to 6.2 and 6.3 as well. i haven't used bzr merge as not too sure about it. next time, i'll use bzr merge instead of applying patch to each tree and committing.
[29 Apr 2009 11:37]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:jack@sun.com-20090429081724-ny49e0kw3y6xpjkw) (version source revid:jack@sun.com-20090429081724-ny49e0kw3y6xpjkw) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[30 Apr 2009 8:51]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:ole.john.aske@sun.com-20090430084504-2c8iheeuc631njs5) (version source revid:ole.john.aske@sun.com-20090430084504-2c8iheeuc631njs5) (merge vers: 5.1.32-ndb-7.0.6) (pib:6)
[22 May 2009 10:01]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jack@asus-20090522095945-ur0yba219nep8r6h) (version source revid:jack@sun.com-20090429074150-hbifkfeo5k32zogg) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[24 May 2009 19:21]
Bugs System
Pushed into 5.1.34-ndb-6.3.26 (revid:jonas@mysql.com-20090524191643-w4csl0015l3s1qgs) (version source revid:jonas@mysql.com-20090524191643-w4csl0015l3s1qgs) (merge vers: 5.1.34-ndb-6.3.26) (pib:6)
[24 May 2009 19:22]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090524191743-7gc0xl8kmnpmluux) (version source revid:jonas@mysql.com-20090524191743-7gc0xl8kmnpmluux) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[27 May 2009 16:32]
Jon Stephens
Bugfix also documented in the NDB-6.2.18 and 6.3.25 changelogs. Closed.

Description: The output of ndbd --help does not list options in alphabetical order. Also, --initial and --initial-start options are described in redundant sections.. --initial Perform initial start of ndbd, including cleaning the file system. Consult documentation before using this --initial-start Perform initial start These should be merged into a single entry --initial, --initial-start How to repeat: ndbd --help