bug#28905 problems with output from `ndbd --help`